# AcmeUIKit

./: .gitignore  ACME_DESIGN_SYSTEM.md  AGENTS.md  AcmeUIKit_Visual_System_V2_Design_Guide.md  Cargo.toml  LICENSE  MANIFEST.md  NOTICE.md  README.md  README.zh-TW.md  final.md  plan.md  spec.md  test.md  todos.md
.cargo/: config.toml
.github/workflows/: ci.yml
.opencode/: memory.db
.opencode/memory/: memory.db-shm  memory.db-wal
.opencode/memory/.runtime/: lifecycle.jsonl
.opencode/status-footer/: state.json
AcmeUIKit_Design_Bible_v1.0/: ACCESSIBILITY_AND_QA.md  ACME_DESIGN_BIBLE_v1.0.md  AGENT_IMPLEMENTATION_GUIDE.md  COMPONENT_STANDARDS.md  DESKTOP_PATTERNS.md  MIGRATION_PLAN.md  README.md  TOKENS.md  TOKEN_SCHEMA_EXAMPLE.json
apps/acme-gallery/: Cargo.toml
apps/acme-gallery/src/: main.rs
apps/acme-gallery/src/cards/: helpers.rs  mod.rs  p2_charts.rs  p2_infrastructure.rs  v10_content.rs  v1_foundations.rs  v2_controls.rs  v2_overlays.rs  v2_selection.rs  v3_data.rs  v4_media.rs  v5_utils.rs  v6_components.rs  v7_inputs.rs  v8_desktop.rs  v9_datagrid.rs
apps/acme-gallery/src/examples/: desktop_editor.rs  file_manager.rs  mod.rs  settings_center.rs
crates/acme-ui/: Cargo.toml
crates/acme-ui/src/: about_dialog.rs  accordion.rs  annotation_layer.rs  area_chart.rs  avatar_group.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  candlestick.rs  card.rs  (+79 more)
docs/: ARCHITECTURE.md  COMPONENT_API.md  DESIGN_SYSTEM.md  IMPROVEMENT_REPORT.md  ROADMAP.md  UPGRADE_GPUI.md
scripts/: bootstrap-windows.ps1  check.ps1  check.sh  run-gallery.ps1  run-gallery.sh
(+75 files in other folders)
