[workspace]
resolver = "2"
members = [
    "crates/acme-ui",
    "apps/acme-gallery",
]
default-members = ["apps/acme-gallery"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
rust-version = "1.85"
authors = ["Acme UI Kit contributors"]

[workspace.dependencies]
acme-ui = { path = "crates/acme-ui" }

# Pin to the GPUI revision used by the reference project snapshot inspected for this kit.
# Update all GPUI-family revisions together after running the compatibility checklist.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1a246efd7e1b83ab568ec5e3e6c1a43a42e1abba" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1a246efd7e1b83ab568ec5e3e6c1a43a42e1abba", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
